--- a/week-1/problems/0-horizontal-align/index.html
+++ b/week-1/problems/0-horizontal-align/index.html
@@ -7,14 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horizontal Align</title>
     <style>
-        .container {
-            width: 1200px;
-            /* margin: 0px auto; */
-            background-color: red;
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
         }
 
-        .content {
+        .container {
+            width: 1200px;
             height: 500px;
+            background-color: red;
         }
     </style>
 </head>
