--- a/week-1/problems/1-vertical-align/index.html
+++ b/week-1/problems/1-vertical-align/index.html
@@ -7,22 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horizontal Align</title>
     <style>
-        .container {
-            width: 1200px;
-            margin: 0 auto;
-            background-color: red;
-        }
-        .content {
-            height: 500px;
-        }
-        .vertical-center {
+        body {
             display: flex;
             justify-content: center;
-            height: 100%;
-            flex-direction: column;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
         }
-        .horizontal-center {
-            margin: 0 auto;
+
+        .container {
+            width: 1200px;
+            height: 500px;
+            background-color: red;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
     </style>
 </head>
