week 1 problem 2 solved

--- a/week-1/problems/2-flex-layout/index.html
+++ b/week-1/problems/2-flex-layout/index.html
@@ -9,16 +9,29 @@
     <link rel="stylesheet" href="./index.css">
 
     <style>
-        
+        .container {
+            width: 1200px;
+            margin: 0 auto;
+            display: flex;
+            max-width: 1200px;
+            display: flex;
+            /* height:100vh; */
+        }
 
         .left {
             background-color: red;
-            flex-grow: 1;
+            flex: 1;
+            display:flex;
+            justify-content:center;
+            align-items:center;
         }
 
         .right {
             background-color: blue;
-            flex-grow: 2;
+            flex: 2;
+            display:flex;
+            justify-content:center;
+            align-items:center;
         }
     </style>
 </head>
