week 1 problem 5 completed

--- a/week-1/problems/5-vscode-bottombar/index.html
+++ b/week-1/problems/5-vscode-bottombar/index.html
@@ -41,10 +41,19 @@
             align-items: center;
             height: 100%;
         }
-        
+
+        .bottomBar {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+        }
     </style>
 </head>
 <body>
+    <div class="bottomBar">
     <div class="container">
         <div>
             <h2>Code in any language</h2>
@@ -102,4 +111,5 @@
             </div>
         </div>
     </div>
+</div>
 </body>
